--- a/little-legends-website.html
+++ b/little-legends-website.html
@@ -7,26 +7,27 @@
     <script src="client.js"></script>
     <link rel="stylesheet" type="text/css" href="ll-website.css">
 </head>
-<body>
+<body> 
     <!-- Navigation menu -->
     <nav>
         <ul>
             <li><a href="little-legends-website.html">Home</a></li>
             <li><a href="about-me-ll.html">About Us</a></li>
-            <!-- <li><a href="email-management.html">Email Management</a></li> -->
-            <!-- <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Signup</a></li> -->
+            <li><a href="email-management.html">Email Management</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
         </ul>
     </nav>
 
     <!-- Main content for the home page -->
-    <div class="container">
+    <div>
         <h1>Welcome to Little Legends Daycare</h1>
         <p>Your child's happy place for learning and fun!</p>
         <!-- Add more content for your homepage -->
+        <img src="images/logo.jpg" width="100%" height="50%">
     </div>
 
-    <!-- Include your JavaScript files for any interactive features on your homepage -->
+    <!-- Include JavaScript files for any interactive features on the homepage -->
     <script src="ll-website.js"></script>
 </body>
 </html>
