added some home page styles

--- a/little-legends-website.html
+++ b/little-legends-website.html
@@ -7,13 +7,12 @@
     <script src="client.js"></script>
     <link rel="stylesheet" type="text/css" href="ll-website.css">
 </head>
-<body> 
+<body style="background-color: white;"> 
     <!-- Navigation menu -->
     <nav>
         <ul>
             <li><a href="little-legends-website.html">Home</a></li>
             <li><a href="about-me-ll.html">About Us</a></li>
-            <li><a href="email-management.html">Email Management</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Signup</a></li>
         </ul>
@@ -21,12 +20,9 @@
 
     <!-- Main content for the home page -->
     <div>
-        <h1>Welcome to Little Legends Daycare</h1>
-        <p>Your child's happy place for learning and fun!</p>
-        <!-- Add more content for your homepage -->
-        <img src="images/logo.jpg" width="100%" height="50%">
+        <img src="images/logo.jpg" width="100%" height="50%" data-dqa-img="wallpaper" class="background-image">
     </div>
-
+  
     <!-- Include JavaScript files for any interactive features on the homepage -->
     <script src="ll-website.js"></script>
 </body>
